--- a/src/styles/home/HomeHero.css
+++ b/src/styles/home/HomeHero.css
@@ -24,8 +24,8 @@
 }
 
 .hero-bg-image {
-  width: 110%;
-  height: 110%;
+  width: 93;
+  height: 93%;
   object-fit: cover;
   object-position: center;
   user-select: none;
