--- a/src/styles/home/index.css
+++ b/src/styles/home/index.css
@@ -12,4 +12,5 @@
 @import './HomeAnimations.css';
 @import './HomeThemeLight.css';
 @import './HomeThemeLightExtra.css';
+@import './HomePerspective.css';
 @import './HomeResponsive.css';
